Updated for desktop changes

--- a/less/index.less
+++ b/less/index.less
@@ -1,15 +1,15 @@
 // Import your less files here:
 // Variables and Mixins
-@import "variables.less";
-@import "mixins.less";
+@import "variables";
+@import "mixins";
 
 // Reset and Global Styles
-@import "reset.less";
-@import "global.less";
+@import "reset";
+@import "global";
 
 // Reusable components
-@import "navigation.less";
-@import "footer.less";
+@import "navigation";
+@import "footer";
 
 // Page Specific
-@import "home-page.less";
+@import "home-page";
