--- a/css/index.css
+++ b/css/index.css
@@ -135,7 +135,7 @@ html {
 html,
 body {
   font-family: 'Ubuntu', sans-serif;
-  color: #5E6164;
+  color: #5e6164;
 }
 h1,
 h2,
@@ -143,7 +143,7 @@ h3,
 h4,
 h5 {
   font-family: 'Russo One', sans-serif;
-  color: #23293B;
+  color: #23293b;
 }
 h2 {
   font-size: 3.2rem;
@@ -159,6 +159,31 @@ p {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+}
+.main-navigation {
+  width: 100%;
+  height: 100px;
+  background: #f6f6f6;
+}
+.main-navigation .nav-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+.main-navigation .nav-container h1 {
+  font-size: 4rem;
+}
+.main-navigation .nav-container .nav {
+  width: 350px;
+  display: flex;
+  justify-content: space-evenly;
+}
+.main-navigation .nav-container .nav a {
+  font-size: 1.6rem;
+  color: #454a59;
+  text-decoration: none;
 }
 footer {
   color: #22283B;
@@ -211,6 +236,22 @@ footer {
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
+}
+.home .walk .walk-text .btn {
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 35px;
+  background-color: #22283a;
+  color: white;
+  cursor: pointer;
+  font-size: 2rem;
+  /*&:hover {
+    background: white;
+    color: @button-bg;
+  }*/
 }
 .home .walk .walk-img {
   width: 46%;
