--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,30 @@
-// Navigation code here
+.main-navigation {
+  width: 100%;
+  height: 100px;
+  background: @nav-bg;
+  //border-bottom: 2px dashed @navigation-border;
+  //position: fixed;
+
+  .nav-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+
+    h1 {
+      font-size: 4rem;
+    }
+    .nav {
+      width: 350px;
+      display: flex;
+      justify-content: space-evenly;
+
+      a {
+        font-size: 1.6rem;
+        color: @nav-font;
+        text-decoration: none;
+      } // a
+    } // nav
+  } // nav container
+} // .main-navigation// Navigation code here
