--- a/css/index.css
+++ b/css/index.css
@@ -134,7 +134,7 @@ html {
 }
 html,
 body {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Ubuntu", sans-serif;
   color: #5e6164;
 }
 h1,
@@ -142,7 +142,7 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: 'Russo One', sans-serif;
+  font-family: "Russo One", sans-serif;
   color: #23293b;
 }
 h2 {
@@ -160,10 +160,22 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  .container {
+    width: 90%;
+    margin: 0 0;
+  }
+}
 .main-navigation {
   width: 100%;
   height: 100px;
   background: #f6f6f6;
+}
+@media (max-width: 500px) {
+  .main-navigation {
+    width: 100%;
+    margin: 0 5%;
+  }
 }
 .main-navigation .nav-container {
   height: 100%;
@@ -180,13 +192,19 @@ p {
   display: flex;
   justify-content: space-evenly;
 }
+@media (max-width: 500px) {
+  .main-navigation .nav-container .nav {
+    width: 100%;
+    justify-content: space-around;
+  }
+}
 .main-navigation .nav-container .nav a {
   font-size: 1.6rem;
   color: #454a59;
   text-decoration: none;
 }
 footer {
-  color: #22283B;
+  color: #22283b;
   background: #f4f4f4;
   padding: 20px 0;
   border: 1px double #e0e0e0;
@@ -195,11 +213,35 @@ footer {
   justify-content: center;
   align-items: center;
 }
+@media (max-width: 500px) {
+  footer {
+    padding-top: 5px;
+  }
+}
 .home .intro h2 {
   padding: 15px;
 }
 .home .intro p {
   padding: 0 15px;
+}
+@media (max-width: 500px) {
+  .home .intro p {
+    margin: 0 5% 0 0;
+    text-align: justify;
+    line-height: 1.2;
+    word-spacing: normal;
+  }
+}
+.home .intro img {
+  border-radius: 5px;
+  max-width: 112%;
+  height: auto;
+}
+@media (max-width: 500px) {
+  .home .intro img {
+    width: 100%;
+    height: auto;
+  }
 }
 .home .space-images {
   display: flex;
@@ -211,6 +253,22 @@ footer {
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images {
+    flex-direction: column;
+  }
+  .home .space-images img {
+    width: 90%;
+    margin: 6% 5%;
+    height: auto;
+  }
+  .home .space-images .sky {
+    display: none;
+  }
+  .home .space-images .launch {
+    display: none;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -228,8 +286,23 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    flex-direction: column-reverse;
+    width: 100%;
+    margin: 3% 0%;
+    padding: 20px;
+    border-top: 1px solid #dee2e6;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+    margin-top: 5%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -253,12 +326,41 @@ footer {
     color: @button-bg;
   }*/
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 460px;
+    height: 70px;
+    background-color: #22283a;
+    color: white;
+    cursor: pointer;
+    font-size: 2rem;
+    /*&:hover {
+    background: white;
+    color: @button-bg;
+  }*/
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 0%;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home {
+    width: 100%;
+  }
 }
