--- a/less/home-page.less
+++ b/less/home-page.less
@@ -8,6 +8,24 @@
 
     p {
       padding: 0 15px;
+
+      @media @phone {
+        margin: 0 5% 0 0;
+        text-align: justify;
+        line-height: 1.2;
+        word-spacing: normal;
+      }
+    }
+
+    img {
+      border-radius: 5px;
+      max-width: 112%;
+      height: auto;
+
+      @media @phone {
+        width: 100%;
+        height: auto;
+      }
     }
   }
 
@@ -21,6 +39,23 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+    }
+
+    @media @phone {
+      flex-direction: column;
+
+      img {
+        width: 90%;
+        margin: 6% 5%;
+        height: auto;
+      }
+
+      .sky {
+        display: none;
+      }
+      .launch {
+        display: none;
+      }
     }
   }
 
@@ -43,8 +78,20 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      flex-direction: column-reverse;
+      width: 100%;
+      margin: 3% 0%;
+      padding: 20px;
+      border-top: 1px solid @main-border-color;
+    }
+
     .walk-text {
       width: 50%;
+      @media @phone {
+        width: 100%;
+        margin-top: 5%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -56,18 +103,29 @@
 
       .btn {
         .button-creator(100px, 35px, @btn-bg-color, white, 2rem, 5px);
+
+        @media @phone {
+          .button-creator(460px, 70px, @btn-bg-color, white, 2rem, 5px);
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone {
+        width: 100%;
+        margin: 0%;
+      }
 
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
-      }
-    }
+      } // img
+    } //walk-img
+  } // walk
+  @media @phone {
+    width: 100%;
   }
 } // home
