--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,6 +4,10 @@
   background: @nav-bg;
   //border-bottom: 2px dashed @navigation-border;
   //position: fixed;
+  @media @phone {
+    width: 100%;
+    margin: 0 5%;
+  }
 
   .nav-container {
     height: 100%;
@@ -19,6 +23,10 @@
       width: 350px;
       display: flex;
       justify-content: space-evenly;
+      @media @phone {
+        width: 100%;
+        justify-content: space-around;
+      }
 
       a {
         font-size: 1.6rem;
