--- a/less/mixins.less
+++ b/less/mixins.less
@@ -5,6 +5,10 @@
   align-items: center;
 }
 
+.cursor-pointer() {
+  cursor: pointer;
+}
+
 .button-creator(@width, @height, @bg-color, @font-color, @font-size, @brd-radius) {
   border-radius: @brd-radius;
   .center();
@@ -13,11 +17,11 @@
   background-color: @bg-color;
   color: @font-color;
   //border: 1px solid black;
-  cursor: pointer;
+  .cursor-pointer();
   font-size: @font-size;
 
-  /*&:hover {
-    background: white;
-    color: @button-bg;
-  }*/
+  &:hover {
+    background: @font-color;
+    color: @bg-color;
+  }
 }
