--- a/less/navigation.less
+++ b/less/navigation.less
@@ -14,6 +14,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    @media @phone {
+      justify-content: baseline;
+    }
 
     h1 {
       font-size: 4rem;
